--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
   "type": "module",
   "scripts": {
     "start:dev": "nodemon --exec ts-node-esm src/index.ts",
-    "start:prod": "rm -rf dist && tsc -p tsconfig.json"
+    "start:prod": "rm -rf dist && tsc -p tsconfig.json",
+    "test": "jest --silent",
+    "test:verbose": "jest"
   },
   "dependencies": {
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6",
+    "supertest": "^6.3.3"
   },
   "keywords": [],
   "author": "",
