--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start:dev": "nodemon --exec ts-node-esm src/index.ts",
     "start:prod": "rm -rf dist && tsc -p tsconfig.json",
+    "start:multi": "nodemon --exec ts-node-esm src/loadBalancer/index.ts",
     "test": "jest --silent",
     "test:verbose": "jest"
   },
