--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start:dev": "nodemon --exec ts-node-esm src/index.ts",
-    "start:prod": "rm -rf dist && tsc -p tsconfig.json",
+    "start:prod": "tsc -p tsconfig.json && node dist/index.js",
     "start:multi": "nodemon --exec ts-node-esm src/loadBalancer/index.ts",
     "test": "jest --silent",
     "test:verbose": "jest"
